Fixed bug #27782 (Wrong behaviour of next(), prev() and each()).